// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should hide add members button when member sync activated 1`] = `
<div
  className="organization-empty"
>
  <h3
    className="text-center"
  >
    onboarding.create_organization.ready
  </h3>
  <div
    className="display-flex-space-around huge-spacer-top"
  >
    <Button
      className="button-huge"
      onClick={[Function]}
    >
      <OnboardingProjectIcon
        className="big-spacer-bottom"
      />
      <p
        className="medium spacer-top"
      >
        provisioning.analyze_new_project
      </p>
    </Button>
  </div>
</div>
`;

exports[`should render 1`] = `
<div
  className="organization-empty"
>
  <h3
    className="text-center"
  >
    onboarding.create_organization.ready
  </h3>
  <div
    className="display-flex-space-around huge-spacer-top"
  >
    <Button
      className="button-huge"
      onClick={[Function]}
    >
      <OnboardingProjectIcon
        className="big-spacer-bottom"
      />
      <p
        className="medium spacer-top"
      >
        provisioning.analyze_new_project
      </p>
    </Button>
    <Button
      className="button-huge"
      onClick={[Function]}
    >
      <OnboardingAddMembersIcon />
      <p
        className="medium spacer-top"
      >
        organization.members.add.multiple
      </p>
    </Button>
  </div>
</div>
`;
